rewriting the numba functions to be c style

--- a/Python/EnergyMinimization/EnergyMinimizationScript3D.ipynb
+++ b/Python/EnergyMinimization/EnergyMinimizationScript3D.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,21 +309,21 @@
     "    # minimize\n",
     "    history=[]\n",
     "    #energy3D(P,bondlist,orientedboundarytris,bidxTotidx,tetras,r0_ij,khook,kbend,theta0,B,MatNon,TargetVolumes): \n",
-    "    #Pout_ij = opt.minimize(energy3D, Pout_ij.ravel()\n",
-    "    #                        ,callback=mycallback\n",
-    "    #                        ,options={'gtol':1e-02,'disp': True}  \n",
-    "    #                        ,args=(bonds\n",
-    "    #                              ,orientedboundarytris\n",
-    "    #                              ,bidxTotidx\n",
-    "    #                              ,tetras\n",
-    "    #                              ,r0_ij\n",
-    "    #                              ,khook\n",
-    "    #                              ,kbend\n",
-    "    #                 ~             ,theta0\n",
-    "    #                              ,B\n",
-    "    #                              ,MatNon\n",
-    "    #                              ,TargetVolumes)\n",
-    "    #                       ).x.reshape((-1, 3))\n",
+    "    Pout_ij = opt.minimize(Numbaenergy3D, Pout_ij.ravel()\n",
+    "                            ,callback=mycallback\n",
+    "                            ,options={'gtol':1e-02,'disp': True}  \n",
+    "                            ,args=(bonds\n",
+    "                                  ,orientedboundarytris\n",
+    "                                  ,bidxTotidx\n",
+    "                                  ,tetras\n",
+    "                                  ,r0_ij\n",
+    "                                  ,khook\n",
+    "                                  ,kbend\n",
+    "                     ~             ,theta0\n",
+    "                                  ,B\n",
+    "                                  ,MatNon\n",
+    "                                  ,TargetVolumes)\n",
+    "                           ).x.reshape((-1, 3))\n",
     "     \n",
     "    Output3D(DataFolder,OutputMesh,Pout_ij,bonds,orientedboundarytris,bidxTotidx,tetras,r0_ij,khook,kbend,theta0,B,MatNon,TargetVolumes,g0)\n"
    ]
