adding some unit tests for the analysis code

--- a/Python/EnergyMinimization/UnitTests.ipynb
+++ b/Python/EnergyMinimization/UnitTests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackbinysh/miniconda3/lib/python3.8/site-packages/numpy/ctypeslib.py:521: RuntimeWarning: A builtin ctypes object gave a PEP3118 format string that does not match its itemsize, so a best-guess will be made of the data type. Newer versions of python may behave correctly.\n",
+      "  return array(obj, copy=False)\n"
+     ]
+    }
+   ],
    "source": [
     "with pygmsh.occ.Geometry() as geom:\n",
     "    geom.characteristic_length_max = 0.1\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,27 +116,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array_equal(boundarytris,np.sort(InputMesh.cells[1].data,axis=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3152, 3)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "boundarytris.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3152, 3)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "InputMesh.cells[1].data.shape"
    ]
@@ -155,18 +197,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.541854700804393"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vTotalArea3D(InputMesh.points,boundarytris)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.566370614359172"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "4*np.pi"
    ]
@@ -187,29 +251,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.174006564818102"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Volume3D(InputMesh.points,orientedboundarytris,bidxTotidx).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.174006564818101"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Volume3D_tetras(InputMesh.points,tetras).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.1887902047863905"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(4/3)*np.pi"
    ]
@@ -237,9 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.465244019644638"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "theta_0=0\n",
     "kbend=1\n",
@@ -249,9 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.255197456936872"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(4/np.sqrt(3))*np.pi"
    ]
@@ -1079,29 +1198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/Data/Scratch'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DataFolder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,91 +1246,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-8.27972800e-17  1.27304927e-16  4.63916972e-17]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(center)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.95   0.95   1.0556]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(axes)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.00000000e+00  2.83199310e-01 -1.93375966e-17]\n",
-      " [ 0.00000000e+00 -9.59061078e-01 -5.11802564e-17]\n",
-      " [ 0.00000000e+00 -6.48845249e-17  1.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.00000000e+00  2.95288086e-01  3.44505166e-17]\n",
-      " [-0.00000000e+00 -1.04268646e+00 -5.33649603e-17]\n",
-      " [ 0.00000000e+00 -6.76542156e-17  1.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(inve)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.10803324e+00  1.10803324e+00  8.97431350e-01 -5.24537011e-16\n",
-      "  8.14506882e-18  2.95987193e-17  1.83484277e-16 -2.82116182e-16\n",
-      " -8.32667268e-17 -1.00000000e+00]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(vec)"
    ]
@@ -1235,11 +1297,289 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Testing the Analytic Prediction Functions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To test these functions are working fine, I will compare a few values to the mathematica code, with some randomly chosen parameter values:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function AnalysisFunctions.FTot(lam, MatNon, gamma, kappa)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FTot"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Expectation:\n",
+    "\n",
+    "alpha0=0.5\n",
+    "kappa0=0.3\n",
+    "gamma0=0.2\n",
+    "\n",
+    "FTot(1,alpha0,gamma0=0.2,kappa0)= 16.3363\n",
+    "FTot(1.2,alpha0,gamma0=0.2,kappa0)= 16.8611\n",
+    "FTot(0.2,alpha0,gamma0=0.2,kappa0)= 205.077\n",
+    "\n",
+    "alpha0=0.5\n",
+    "kappa0=0.3\n",
+    "gamma0=-0.2\n",
+    "\n",
+    "FTot(1,alpha0,gamma0=0.2,kappa0)= 11.3097\n",
+    "FTot(1.2,alpha0,gamma0=0.2,kappa0)= 11.7705\n",
+    "FTot(0.2,alpha0,gamma0=0.2,kappa0)= 192.198\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 16.33628196,  16.86107279, 205.07746158])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lam=np.array([1.0001,1.2,0.2])\n",
+    "alpha0=0.5\n",
+    "kappa0=0.3\n",
+    "gamma0=0.2\n",
+    "FTot(lam,alpha0,gamma0,kappa0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 11.3097337 ,  11.77050867, 192.1976561 ])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha0=0.5\n",
+    "kappa0=0.3\n",
+    "gamma0=-0.2\n",
+    "FTot(lam,alpha0,gamma0,kappa0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: This function seems to be working okay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.FindGlobalMinimum(alpha, gamma, kappa, leftstart, rightstart)>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FindGlobalMinimum"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Expectation:\n",
+    "\n",
+    "alpha0=0.6\n",
+    "kappa0=0.4\n",
+    "gamma0=-1\n",
+    "FindGlobalMinimum(alpha0,gamma0,kappa0,0.1,5)-> lam =1 , F =3.76991\n",
+    "\n",
+    "\n",
+    "alpha0=0.6\n",
+    "kappa0=0.4\n",
+    "gamma0=-4.0\n",
+    "FindGlobalMinimum(alpha0,gamma0,kappa0,0.1,5)-> lam =1.55262 , F =-34.1081\n",
+    "\n",
+    "alpha0=0.1\n",
+    "kappa0=0.4\n",
+    "gamma0=-4.0\n",
+    "FindGlobalMinimum(alpha0,gamma0,kappa0,0.1,5)-> lam =0.691294 , F =-34.0731\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in power\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:177: RuntimeWarning: invalid value encountered in arctanh\n",
+      "  Fbend=(2/3)*np.pi*kappa*(7+(2/lam**3)+3*lam**3*np.arctanh(np.lib.scimath.sqrt(1-lam**3))/np.lib.scimath.sqrt(1-lam**3))\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in power\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:177: RuntimeWarning: invalid value encountered in arctanh\n",
+      "  Fbend=(2/3)*np.pi*kappa*(7+(2/lam**3)+3*lam**3*np.arctanh(np.lib.scimath.sqrt(1-lam**3))/np.lib.scimath.sqrt(1-lam**3))\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in power\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:177: RuntimeWarning: invalid value encountered in arctanh\n",
+      "  Fbend=(2/3)*np.pi*kappa*(7+(2/lam**3)+3*lam**3*np.arctanh(np.lib.scimath.sqrt(1-lam**3))/np.lib.scimath.sqrt(1-lam**3))\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in power\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:177: RuntimeWarning: invalid value encountered in arctanh\n",
+      "  Fbend=(2/3)*np.pi*kappa*(7+(2/lam**3)+3*lam**3*np.arctanh(np.lib.scimath.sqrt(1-lam**3))/np.lib.scimath.sqrt(1-lam**3))\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in power\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:177: RuntimeWarning: invalid value encountered in arctanh\n",
+      "  Fbend=(2/3)*np.pi*kappa*(7+(2/lam**3)+3*lam**3*np.arctanh(np.lib.scimath.sqrt(1-lam**3))/np.lib.scimath.sqrt(1-lam**3))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 9.99999980e-01,  1.00000006e+00,  9.99999901e-01, -2.05915031e+03]),\n",
+       " array([3.76991118, 3.76991118, 3.76991118,        nan]))"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha0=0.6\n",
+    "kappa0=0.4\n",
+    "gamma0=-1\n",
+    "FindGlobalMinimum(alpha0,gamma0,kappa0,0.1,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1.55261902, 1.55261989, 1.55261655, 0.75259418]),\n",
+       " array([-34.10806635, -34.10806635, -34.10806635, -33.99780542]))"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha0=0.6\n",
+    "kappa0=0.4\n",
+    "gamma0=-4.0\n",
+    "FindGlobalMinimum(alpha0,gamma0,kappa0,0.1,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in power\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:175: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  Area = (2*np.pi/lam)*( 1+(lam**(3/2)/e)*np.arcsin(e) )\n",
+      "/home/jackbinysh/Code/ActiveElastocapillarity/Python/EnergyMinimization/AnalysisFunctions.py:177: RuntimeWarning: invalid value encountered in arctanh\n",
+      "  Fbend=(2/3)*np.pi*kappa*(7+(2/lam**3)+3*lam**3*np.arctanh(np.lib.scimath.sqrt(1-lam**3))/np.lib.scimath.sqrt(1-lam**3))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.69129378, 1.35181449, 1.35181461, 1.35181512]),\n",
+       " array([-34.0731449 , -33.99911156, -33.99911156, -33.99911156]))"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha0=0.1\n",
+    "kappa0=0.4\n",
+    "gamma0=-4.0\n",
+    "FindGlobalMinimum(alpha0,gamma0,kappa0,0.1,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: The minimizer also appears to work okay"
+   ]
   }
  ],
  "metadata": {
